samples/_failures_safe/1761149439_aa6395_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85e9ca32.c: In function ‘main’:
./samples/SAFE/__tmp_85e9ca32.c:145:5: error: expected expression at end of input
  145 |     if (!compress_data(&
      |     ^~
./samples/SAFE/__tmp_85e9ca32.c:145:5: error: expected declaration or statement at end of input
